# taskproc

./: .clang-format  .gitignore  CODING.md  MVP.md  README.md  mise.toml
.zed/: debug.json
docs/: Doxyfile
docs/doxygen/html/: annotated.html  annotated_dup.js  classCSVReader-members.html  classCSVReader.html  classCSVReader.js  classCommandParser-members.html  classCommandParser.html  classDataManager-members.html  classDataManager.html  classDataManager.js  classDatabase-members.html  classDatabase.html  classDatabase.js  classExpressionParser-members.html  classExpressionParser.html  classITaskReader-members.html  classITaskReader.html  classITaskReader.js  classJSONReader-members.html  classJSONReader.html  classJSONReader.js  classViewStorage-members.html  classViewStorage.html  classViewStorage.js  classes.html  csv__reader_8hpp_source.html  data__manager_8hpp_source.html  database_8hpp_source.html  dir_0d27ce74e9bd514c31e1d63efab6b388.html  dir_0d27ce74e9bd514c31e1d63efab6b388.js  dir_6e65d24a29b6768d65595dff4541e918.html  dir_6e65d24a29b6768d65595dff4541e918.js  dir_80c9bbdb0d239ca6adfcaca0891dbb0e.html  dir_80c9bbdb0d239ca6adfcaca0891dbb0e.js  dir_82c61eddf37a6d4d216880b2c1d57908.html  dir_82c61eddf37a6d4d216880b2c1d57908.js  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.js  doxygen_crawl.html  expr__parser_8hpp_source.html  (+30 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_6.js  classes_7.js  classes_9.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  functions_c.js  functions_d.js  searchdata.js  variables_0.js
examples/: sample_tasks.csv  sample_tasks.json
source/: CMakeLists.txt  main.cpp
source/cli/: parser.cpp  parser.hpp
source/core/: data_manager.cpp  data_manager.hpp  database.cpp  database.hpp  expr_parser.cpp  expr_parser.hpp  task.cpp  task.hpp  view_action.hpp
source/io/: csv_reader.cpp  csv_reader.hpp  json_reader.cpp  json_reader.hpp  reader.hpp  view_storage.cpp  view_storage.hpp
tests/: CMakeLists.txt  test_csv_reader.cpp  test_data_manager.cpp  test_database.cpp  test_expr_parser.cpp  test_json_reader.cpp  test_ownership.cpp  test_parser.cpp  test_view_storage.cpp
